[package]
name = "aws-provider"
version = "0.1.0"
edition = "2024"

[lib]
name = "aws_provider"
path = "src/lib.rs"

[[bin]]
name = "aws-provider"
path = "src/main.rs"

authors = ["yamlet"]

[dependencies]
aws-config = "1.8.8"
aws-sdk-ec2 = "1.175.0"
aws-types = "1.3.9"
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["transport"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
serde_json = "1.0.145"

[build-dependencies]
tonic-build = "0.12"
