[package]
name = "plugin-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tonic = { version = "0.12", features = ["transport"] }
tokio = { version = "1.48.0", features = ["full"] }
prost-types = "0.13"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
tonic-prost-build = "*"
