[package]
name = "yamlet-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.8"
aws-sdk-ec2 = "1.175.0"
aws-types = "1.3.9"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
comfy-table = "7.2.1"
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["transport"] }
http = "1"
[dev-dependencies]
serial_test = "3.2.0"



[build-dependencies]
tonic-build = "0.12"